# jfs

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
lib/: CMakeLists.txt
lib/CXXFuzzingBackend/: CMakeLists.txt  CXXFuzzingSolver.cpp  CXXFuzzingSolverOptions.cpp  CXXProgram.cpp  CXXProgramBuilderOptions.cpp  CXXProgramBuilderPass.cpp  CXXProgramBuilderPassImpl.cpp  CXXProgramBuilderPassImpl.h  ClangInvocationManager.cpp  ClangOptions.cpp  JFSCXXProgramStat.cpp
lib/CXXFuzzingBackend/CmdLine/: CMakeLists.txt  CXXProgramBuilderOptionsBuilder.cpp  ClangOptionsBuilder.cpp  CommandLineCategory.cpp
lib/Core/: CMakeLists.txt  JFSContext.cpp  Model.cpp  ModelValidator.cpp  Query.cpp  RNG.cpp  SMTLIB2Parser.cpp  SimpleModel.cpp  Solver.cpp  ToolErrorHandler.cpp  Z3ASTVisitor.cpp  Z3Node.cpp  Z3NodeUtil.cpp
lib/FuzzingCommon/: BufferAssignment.cpp  BufferElement.cpp  CMakeLists.txt  CommandLineCategory.cpp  DummyFuzzingSolver.cpp  EqualityExtractionPass.cpp  FileSerializableModel.cpp  FreeVariableToBufferAssignmentPass.cpp  FreeVariableToBufferAssignmentPassOptions.cpp  FuzzingAnalysisInfo.cpp  FuzzingSolver.cpp  FuzzingSolverOptions.cpp  JFSRuntimeFuzzingStat.cpp  LibFuzzerInvocationManager.cpp  LibFuzzerOptions.cpp  SMTLIBRuntimes.cpp.in  SMTLIBRuntimes.h.in  SeedGenerator.cpp  SeedManager.cpp  SeedManagerStat.cpp  SortConformanceCheckPass.cpp  SpecialConstantSeedGenerator.cpp  SpecialConstantSeedGeneratorStat.cpp  WorkingDirectoryManager.cpp
lib/FuzzingCommon/CmdLine/: CMakeLists.txt  FreeVariableToBufferAssignmentPassOptionsBuilder.cpp  LibFuzzerOptionsBuilder.cpp  SeedManagerOptionsBuilder.cpp
lib/Support/: CMakeLists.txt  CancellableProcess.cpp  ErrorMessages.cpp  FileUtils.cpp  ICancellable.cpp  JFSStat.cpp  ScopedTimer.cpp  StatisticsManager.cpp  Timer.cpp  version.cpp
lib/Transform/: AndHoistingPass.cpp  BitBlastPass.cpp  BvBoundPropagationPass.cpp  CMakeLists.txt  ConstantPropagationPass.cpp  DIMACSOutputPass.cpp  DuplicateConstraintEliminationPass.cpp  FpToBvPass.cpp  QueryPassManager.cpp  SimpleContradictionsToFalsePass.cpp  SimplificationPass.cpp  StandardPasses.cpp  TrueConstraintEliminationPass.cpp  Z3QueryPass.cpp
lib/Z3Backend/: CMakeLists.txt  Z3Solver.cpp
runtime/: CMakeLists.txt
runtime/LibFuzzer/: CMakeLists.txt  README-JFS.md
runtime/LibFuzzer/Fuzzer/: CMakeLists.txt  FuzzerCrossOver.cpp  FuzzerDriver.cpp  FuzzerExtFunctions.def  FuzzerFlags.def  FuzzerLoop.cpp  FuzzerMutate.cpp  FuzzerOptions.h  FuzzerTracePC.cpp
runtime/LibPureRandomFuzzer/: API.cpp  API.h  CMakeLists.txt  Driver.cpp  Driver.h  Log.h  Main.cpp  Options.def  README.md  Signals.cpp  Signals.h  TestInput.cpp  TestInput.h  Types.h
runtime/SMTLIB/: BitVector.h  BufferRef.h  CMakeLists.txt  Core.h  jassert.h
runtime/SMTLIB/SMTLIB/: BitVector.h  BufferRef.h  CMakeLists.txt  Core.cpp  Core.h  Float.cpp  Float.h  Logger.cpp  Logger.h  Messages.cpp  Messages.h  NativeBitVector.cpp  NativeBitVector.h  NativeFloat.cpp  NativeFloat.h  jassert.h
runtime/SMTLIB/SMTLIB/unittests/: CMakeLists.txt  SMTLIBRuntimeTestUtil.cpp  SMTLIBRuntimeTestUtil.h  lit-unit-tests-common.site.cfg.in
runtime/SMTLIB/gtest/: CMakeLists.txt
runtime/StatLog/: CMakeLists.txt  Logger.cpp  Logger.h
tests/: CMakeLists.txt
tests/system_tests/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
tests/system_tests/CNF/: 2017-09-02-float-constant-regression.smt2  imperial_synthetic_sqrt_klee_bug.x86_64_query.05.smt2  less_variables_than_bits.smt2
tests/system_tests/CXXFuzzingBackend/: CMakeLists.txt
tests/system_tests/CXXFuzzingBackend/CXXProgramBuilder/: SingleConstantAssignment.smt2  SingleUnconstraintedBool.smt2  UsedConstantAssignment.smt2  UsedConstantFloatingPointAssignment.smt2  and.smt2  bvand_nary.smt2  bvmul.smt2  bvneg.smt2  bvor.smt2  bvor_nary.smt2  bvsge.smt2  bvsgt.smt2  bvshl.smt2  bvsle.smt2  bvslt.smt2  bvsmod_i.smt2  bvsub.smt2  bvudiv.smt2  bvudiv0.smt2  bvudiv_i.smt2  bvuge.smt2  bvugt.smt2  bvult.smt2  bvurem.smt2  bvxor.smt2  distinct_bitvector.smt2  distinct_bool.smt2  extract.smt2  inconsistent_equalities.smt2  ite_bitvector.smt2  not.smt2  or.smt2  rotate_left.smt2  rotate_right.smt2  sign_extend.smt2  zero_extend.smt2
tests/system_tests/CXXFuzzingBackend/Fuzz/: CMakeLists.txt  lit.local.cfg  test_format.py
tests/system_tests/CXXFuzzingBackend/SeedGeneration/: all_zeros_and_all_ones.smt2  bool_bv_float.smt2  bool_bv_float_linux.smt2  max_num_seeds_1.smt2  special_constants_stats.smt2
tests/system_tests/CommandLine/: NonExistentFile.smt2  version.smt2
tests/system_tests/DummyFuzzingSolver/: README.md
tests/system_tests/DummyFuzzingSolver/sat/: trivial_equalities.smt2  true_elim.smt2
tests/system_tests/DummyFuzzingSolver/unknown/: trivial_equality_with_non_trivial_constraint.smt2  unknown_ineq.smt2
tests/system_tests/DummyFuzzingSolver/unsat/: bound_contradiction.smt2  bound_contradiction2.smt2  (+1 more)
tests/unit_tests/: CMakeLists.txt  lit-unit-tests-common.site.cfg.in
tests/unit_tests/Core/: CMakeLists.txt  FloatSpecialConstants.cpp
tests/unit_tests/Dummy/: CMakeLists.txt  Dummy.cpp
tests/unit_tests/FuzzingCommon/: CMakeLists.txt  EqualityExtractionPass.cpp
tests/unit_tests/SMTLIBRuntime/: CMakeLists.txt
tests/unit_tests/runtime/: CMakeLists.txt
tools/: CMakeLists.txt
tools/jfs/: CMakeLists.txt  main.cpp
tools/jfs-opt/: CMakeLists.txt  main.cpp
tools/jfs-smt2cnf/: CMakeLists.txt  main.cpp
tools/jfs-smt2cxx/: CMakeLists.txt  main.cpp
tools/yaml-syntax-check/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/FileCheck/: CMakeLists.txt
utils/SMT-COMP/: StarExec-SMTCOMP2017.Dockerfile  mk_starexec_binary_dist.sh  starexec_description.txt
utils/SMT-COMP/configs/: starexec_run_default
utils/googletest/: CMakeLists.txt  README.md
utils/googletest/googletest/: CMakeLists.txt
utils/hacks/query-run/: query-filter.py  query-info.py  run-queries.py
utils/not/: CMakeLists.txt
utils/suppressions/: supr_env.sh
utils/suppressions/lsan/: README.md  lsan_sup.txt
utils/suppressions/ubsan/: README.md  ubsan_sup.txt
(+522 files in other folders)
