#===------------------------------------------------------------------------===#
#
#                                      JFS
#
# Copyright 2017-2018 Daniel Liew
#
# This file is distributed under the MIT license.
# See LICENSE.txt for details.
#
#===------------------------------------------------------------------------===#
add_subdirectory(Support)
add_subdirectory(Core)
add_subdirectory(Transform)
add_subdirectory(Z3Backend)
add_subdirectory(FuzzingCommon)
add_subdirectory(CXXFuzzingBackend)
