#===------------------------------------------------------------------------===#
#
#                                      JFS
#
# Copyright 2017-2018 Daniel Liew
#
# This file is distributed under the MIT license.
# See LICENSE.txt for details.
#
#===------------------------------------------------------------------------===#
add_subdirectory(jfs)
add_subdirectory(jfs-opt)
add_subdirectory(jfs-smt2cnf)
add_subdirectory(jfs-smt2cxx)
add_subdirectory(yaml-syntax-check)
